--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
 	margin: 0;
 	font-family: 'Open Sans', sans-serif;
-	
+
 }
 
 .header {
@@ -11,7 +11,7 @@ body {
 	background-size: cover;
 }
 
-.conteiner {
+.container {
 	margin: 0px 166px;
 }
 
@@ -68,7 +68,7 @@ body {
 	font-size: 14px;
 	font-weight: 400;
 	color: #fff;
-	
+
 }
 
 .phone-holder {
@@ -95,21 +95,22 @@ body {
 }
 
 .header-title {
-	font-family: 'Tinos';
+	font-family: 'Tinos', serif;
 	font-style: normal;
 	font-size: 50px;
 	font-weight: 400;
 	line-height: 57px;
-	color:#D67E35;
+	color: #D67E35;
 	text-align: center;
 	position: absolute;
 	left: 0;
 	margin-top: 222px;
 	margin-bottom: 12px;
 }
+
 .header-subtitle {
 	Text-transform: uppercase;
-	font-family: 'Tinos';
+	font-family: 'Tinos', serif;
 	font-style: normal;
 	font-weight: 400;
 	font-size: 60px;
@@ -138,8 +139,6 @@ body {
 	left: 68px;
 }
 
-
-
 .header-suptitle::before {
 	display: inline-block;
 	vertical-align: middle;
@@ -152,6 +151,7 @@ body {
 	top: 178px;
 	left: 404px;
 }
+
 .header-button {
 	background-color: #FF7400;
 	padding: 14px 28px;
@@ -165,4 +165,120 @@ body {
 
 .header-button:hover {
 	background-color: #904506;
+}
+
+/* cards*/
+
+.cards-holder {
+	display: flex;
+	justify-content: center;
+}
+
+.card {
+	width: 349px;
+	box-shadow: 10px 10px 40px 20px #0000001A;
+	text-align: center;
+	margin-right: 31px;
+	background-color: #fff;
+	margin-top: -80px;
+	padding: 10px 40px;
+}
+
+.card-image {
+	display: flex;
+	justify-content: center;
+	padding-top: 31px;
+}
+
+.card-title { 
+	display: flex;
+	justify-content: center;
+	margin-bottom: 20px;
+	font-family: 'Tinos', serif;
+	font-style: normal;
+	font-weight: 400;
+	font-size: 26px;
+	line-height: 30px;
+	color: #2C2C2C;
+}
+
+.card-title span {
+	color: #BC9060;
+	margin-left: 8px;
+}
+.card-desc {
+	display: flex;
+	font-family: 'Tinos', serif;
+	font-style: normal;
+	font-weight: 400;
+	font-size: 26px;
+	line-height: 30px;
+	text-align: center;
+	color: #656363;
+}
+
+/* HISTORY*/
+
+.history {
+	margin-top: 166px;
+}
+
+.history-holder {
+	display: flex;
+	justify-content: space-aroundgit;
+}
+
+.history-title {
+	font-family: 'Tinos';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 54px;
+	line-height: 62px;
+	width: 444px;
+	text-align: center;
+	margin-top: 21px;
+}
+
+.history-title span {
+	color: #D67E34;
+}
+
+.history-desc {
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 22px;
+	text-align: center;
+	color: #656363;
+	width: 444px;
+	text-align: center;
+}
+
+.history-number {
+	display: flex;
+	width: 444px;
+	justify-content: center;
+}
+
+.number-item {
+	margin-right: 60px;
+	text-align: center;
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 40px;
+	line-height: 54px;
+	color: #BC9060;
+}
+
+.number-item span {
+	display: block;
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 20px;
+	line-height: 27px;
+	text-align: center;
+	color: #000000;
 }
